// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp mocked current time 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-tooltip="2006-01-02"
  >
    about 22 hours ago
  </span>
</DocumentFragment>
`;

exports[`Timestamp noAbout 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-tooltip="2006-01-02"
  >
    22 hours ago
  </span>
</DocumentFragment>
`;

exports[`Timestamp with time time 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-tooltip="2006-01-02 1:02:00 AM"
  >
    about 21 hours ago
  </span>
</DocumentFragment>
`;
